--- a/timeTableCss.css
+++ b/timeTableCss.css
@@ -98,6 +98,7 @@ th.lin-highlight1,
 }
 #popup {
   position: fixed;
+  z-index: 1;
   top: 0; left: 0;
   width: 100vw;
   height: 100vh;
@@ -200,6 +201,7 @@ th.lin-highlight1,
 }
 #moak_test_noti {
   margin-top: 20px;
+  cursor: pointer;
 }
 footer {
   font-size: var(--font-default);
