--- a/timeTableCss.css
+++ b/timeTableCss.css
@@ -21,6 +21,9 @@
 }
 body {
   font-family: var(--font-poor-story);
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   user-select: none;
 }
 header #title {
